<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:gravity="center_horizontal">
	<LinearLayout android:gravity="center"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="4sp" android:paddingTop="7sp"
		android:background="#400000">
		<Button android:text="@string/button_ok" android:id="@+id/buttonOK"
			android:layout_width="100sp" android:layout_height="wrap_content" />
		<Button android:text="@string/button_cancel" android:id="@+id/buttonCancel"
			android:layout_width="100sp" android:layout_height="wrap_content" />
	</LinearLayout>
	<TabHost android:id="@+id/tabhostPref" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TabWidget android:id="@android:id/tabs"
				android:background="#400000" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<FrameLayout android:id="@android:id/tabcontent"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<ScrollView android:id="@+id/tabPrefMain"
					android:layout_width="fill_parent" android:layout_height="fill_parent">
					<LinearLayout android:layout_width="fill_parent"
						android:padding="13sp" android:orientation="vertical"
						android:layout_height="fill_parent" android:gravity="center_horizontal">
						<TextView android:text="@string/tab_main_text"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:layout_marginBottom="14sp" />
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content">
							<TextView android:gravity="center_vertical"
								android:layout_weight="4" android:layout_width="fill_parent"
								android:layout_marginRight="8sp" android:text="@string/read_interval_text"
								android:layout_height="fill_parent" />
							<Spinner android:id="@+id/spinner_read" android:minWidth="100sp"
								android:layout_weight="5" android:layout_width="fill_parent"
								android:layout_height="wrap_content" android:prompt="@string/width_interval_prompt" />
						</LinearLayout>
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content">
							<TextView android:text="@string/update_interval_text"
								android:gravity="center_vertical" android:layout_weight="4"
								android:layout_height="fill_parent" android:layout_marginRight="8sp"
								android:layout_width="fill_parent" />
							<Spinner android:id="@+id/spinner_update"
								android:minWidth="100sp" android:layout_weight="5"
								android:layout_width="fill_parent" android:layout_height="wrap_content"
								android:prompt="@string/update_interval_prompt" />
						</LinearLayout>
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content">
							<TextView android:text="@string/width_interval_text"
								android:gravity="center_vertical" android:layout_weight="4"
								android:layout_marginRight="8sp" android:layout_height="fill_parent"
								android:layout_width="fill_parent" />
							<Spinner android:id="@+id/spinner_width"
								android:minWidth="100sp" android:layout_weight="5"
								android:layout_width="fill_parent" android:layout_height="wrap_content"
								android:prompt="@string/width_interval_prompt" />
						</LinearLayout>
						<Button android:text="@string/button_reset" android:id="@+id/buttonReset"
							android:layout_height="wrap_content" android:layout_width="200sp"
							android:layout_margin="15sp" />
					</LinearLayout>
				</ScrollView>
				<ScrollView android:id="@+id/tabPrefAppearance"
					android:layout_width="fill_parent" android:layout_height="fill_parent">
					<LinearLayout android:layout_width="fill_parent"
						android:padding="13sp" android:orientation="vertical"
						android:layout_height="fill_parent" android:gravity="center_horizontal">
						<CheckBox android:text="@string/tab_appearance_icons_text"
							android:id="@+id/CheckBoxIcons" android:layout_height="40sp"
							android:layout_width="fill_parent" android:layout_marginTop="5sp" />
						<TextView android:text="@string/tab_appearance_icons_thanks_text"
							android:layout_height="wrap_content" android:layout_width="fill_parent"
							android:layout_marginLeft="4sp" android:textSize="11sp"
							android:layout_marginBottom="25sp" android:autoLink="web" />
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content">
							<TextView android:gravity="center_vertical"
								android:layout_weight="1" android:layout_width="fill_parent"
								android:text="@string/tab_appearance_background_text"
								android:layout_height="fill_parent" />
							<EditText android:id="@+id/EditTextBackgroundColor"
								android:maxLength="7" android:minWidth="100sp"
								android:layout_marginLeft="8sp" android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:text="#000000"
								android:layout_marginRight="8sp" />
							<LinearLayout android:id="@+id/LinearLayoutBackgroundColor"
								android:layout_marginTop="10sp" android:layout_marginBottom="10sp"
								android:layout_width="25sp" android:layout_height="fill_parent"
								android:background="#000000" />
						</LinearLayout>
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content">
							<TextView android:gravity="center_vertical"
								android:layout_weight="1" android:text="@string/tab_appearance_lines_text"
								android:layout_height="fill_parent" android:layout_width="fill_parent" />
							<EditText android:minWidth="100sp" android:maxLength="7"
								android:layout_marginLeft="8sp" android:layout_width="wrap_content"
								android:layout_height="wrap_content" android:text="#400000"
								android:id="@+id/EditTextLinesColor" android:layout_marginRight="8sp" />
							<LinearLayout android:id="@+id/LinearLayoutLinesColor"
								android:background="#400000" android:layout_width="25sp"
								android:layout_height="fill_parent" android:layout_marginBottom="10sp"
								android:layout_marginTop="10sp" />
						</LinearLayout>
						<Button android:text="@string/button_reset" android:id="@+id/buttonResetAppearance"
							android:layout_height="wrap_content" android:layout_width="200sp"
							android:layout_margin="15sp" />
					</LinearLayout>
				</ScrollView>
				<ScrollView android:layout_width="fill_parent"
					android:layout_height="fill_parent" android:id="@+id/tabPrefRead"
					android:layout_gravity="center">
					<LinearLayout android:layout_width="fill_parent"
						android:orientation="vertical" android:layout_height="fill_parent"
						android:padding="13sp">
						<TextView android:text="@string/tab_read_text"
							android:layout_height="wrap_content" android:layout_width="wrap_content"
							android:layout_marginBottom="12sp" />
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:gravity="center_horizontal"
							android:layout_marginBottom="15sp">
							<Button android:text="@string/tab_read_select_all"
								android:layout_height="fill_parent" android:layout_width="120sp"
								android:id="@+id/buttonSelectAllRead" />
							<Button android:text="@string/tab_read_unselect_all"
								android:layout_height="fill_parent" android:layout_width="120sp"
								android:id="@+id/buttonUnselectAllRead" />
						</LinearLayout>
						<CheckBox android:layout_height="40sp" android:text="MemFree"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxMemFreeR" />
						<CheckBox android:layout_height="40sp" android:text="Buffers"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxBuffersR" />
						<CheckBox android:layout_height="40sp" android:text="Cached"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCachedR" />
						<CheckBox android:layout_height="40sp" android:text="Active"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxActiveR" />
						<CheckBox android:layout_height="40sp" android:text="Inactive"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxInactiveR" />
						<CheckBox android:layout_height="40sp" android:text="SwapTotal"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxSwapTotalR" />
						<CheckBox android:layout_height="40sp" android:text="Dirty"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxDirtyR" />
						<CheckBox android:layout_height="40sp" android:text="CPU total usage"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPUTotalPR" />
						<CheckBox android:layout_height="40sp" android:text="CPU anotherMonitor"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPUAMPR" />
						<CheckBox android:layout_height="40sp" android:text="CPU rest"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPURestPR" />
					</LinearLayout>
				</ScrollView>
				<ScrollView android:id="@+id/tabPrefDraw"
					android:gravity="center_horizontal" android:layout_width="fill_parent"
					android:layout_height="fill_parent">
					<LinearLayout android:layout_width="fill_parent"
						android:orientation="vertical" android:layout_height="fill_parent"
						android:padding="13sp">
						<TextView android:text="@string/tab_draw_text"
							android:layout_height="wrap_content" android:layout_width="wrap_content"
							android:layout_marginBottom="12sp" />
						<LinearLayout android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:gravity="center_horizontal"
							android:layout_marginBottom="15sp">
							<Button android:text="@string/tab_read_select_all"
								android:layout_height="fill_parent" android:layout_width="120sp"
								android:id="@+id/buttonSelectAllDraw" />
							<Button android:text="@string/tab_read_unselect_all"
								android:layout_height="fill_parent" android:layout_width="120sp"
								android:id="@+id/buttonUnselectAllDraw" />
						</LinearLayout>
						<CheckBox android:layout_height="40sp" android:text="MemFree"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxMemFreeD" />
						<CheckBox android:layout_height="40sp" android:text="Buffers"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxBuffersD" />
						<CheckBox android:layout_height="40sp" android:text="Cached"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCachedD" />
						<CheckBox android:layout_height="40sp" android:text="Active"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxActiveD" />
						<CheckBox android:layout_height="40sp" android:text="Inactive"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxInactiveD" />
						<CheckBox android:layout_height="40sp" android:text="SwapTotal"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxSwapTotalD" />
						<CheckBox android:layout_height="40sp" android:text="Dirty"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxDirtyD" />
						<CheckBox android:layout_height="40sp" android:text="CPU total usage"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPUTotalPD" />
						<CheckBox android:layout_height="40sp" android:text="CPU anotherMonitor"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPUAMPD" />
						<CheckBox android:layout_height="40sp" android:text="CPU rest"
							android:layout_width="wrap_content" android:id="@+id/CheckBoxCPURestPD" />
					</LinearLayout>
				</ScrollView>
			</FrameLayout>
		</LinearLayout>
	</TabHost>
</LinearLayout>